# StellarGrant-fe

./: .gitignore  README.md  TUTORIAL.md  docker-compose.yml
api/: Dockerfile  (+4 more)
stellargrant-contracts/: BENCHMARK.md  COVERAGE.md  Cargo.toml  README.md
stellargrant-contracts/contracts/grant-factory/: Cargo.toml
stellargrant-contracts/contracts/grant-factory/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
stellargrant-contracts/contracts/grant-instance/: Cargo.toml
stellargrant-contracts/contracts/grant-instance/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
stellargrant-contracts/contracts/stellar-grants/: EVENTS.md  README.md  test_output.txt  test_output_utf8.txt
stellargrant-contracts/contracts/stellar-grants/src/: access_control.rs  events.rs  lib.rs  pausable.rs  rbac_test.rs  reentrancy.rs  storage.rs  test.rs  test_pending_funding.rs  token_utils.rs  types.rs
stellargrant-contracts/contracts/stellar-grants/test_snapshots/: test_dispute_and_resolve_flow.1.json  test_dispute_fee_deducted_from_caller.1.json  test_dispute_fee_refunded_when_upheld.1.json  test_dispute_fee_sent_to_treasury_when_dismissed.1.json  test_event_emission_on_grant_create_and_fund.1.json  test_event_emission_on_milestone_vote.1.json  test_milestone_double_voting_panics.1.json  test_milestone_vote_after_quorum_panics.1.json  test_milestone_voting_quorum_and_events.1.json  (+6 more)
stellargrant-contracts/docs/: milestone-expiry.md
stellargrant-contracts/fuzz/: Cargo.toml
stellargrant-contracts/fuzz/fuzz_targets/: grant_lifecycle.rs  milestone_submit.rs  milestone_vote.rs
(+274 files in other folders)
