[package]
name = "stellar-grants-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.stellar-grants]
path = "../contracts/stellar-grants"

[dependencies.soroban-sdk]
version = "25"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "grant_lifecycle"
path = "fuzz_targets/grant_lifecycle.rs"
test = false
doc = false

[[bin]]
name = "milestone_submit"
path = "fuzz_targets/milestone_submit.rs"
test = false
doc = false

[[bin]]
name = "milestone_vote"
path = "fuzz_targets/milestone_vote.rs"
test = false
doc = false

[workspace]
